# QmlRoundedImage

./: CMakeLists.txt  README.md  RoundedImage.pro  RoundedImage.qml  RoundedImage1.qml  RoundedImage2.qml  RoundedImage3.qml  main.cpp  main.qml  qml.qrc
shaders/: mask.frag  mask.frag.qsb  round.frag  round.frag.qsb  roundedCorner.frag  roundedCorner.frag.qsb
